<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/edit_message"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:onClick="sendMessage"
        android:text="@string/button_send"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/editTextMessage"
        app:layout_constraintTop_toTopOf="@+id/editTextMessage" />

    <Button
        android:id="@+id/buttonClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="clearMessage"
        android:text="@string/button_clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextMessage" />

    <EditText
        android:id="@+id/editTextSort1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/editTextSort2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/editTextSort2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/buttonSort"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSort1" />

    <EditText
        android:id="@+id/editTextSort3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/editTextSort2"
        app:layout_constraintTop_toBottomOf="@+id/editTextSort2" />

    <Button
        android:id="@+id/buttonSort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="sortInputs"
        android:text="@string/button_sort"
        app:layout_constraintBottom_toBottomOf="@+id/editTextSort2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/editTextSort2"
        app:layout_constraintTop_toTopOf="@+id/editTextSort2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/heading_sort"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/editTextSort1"
        app:layout_constraintTop_toBottomOf="@+id/buttonClear" />

    <Button
        android:id="@+id/buttonPath1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="path1"
        android:layout_marginTop="32dp"
        android:text="@string/button_path_1"
        app:layout_constraintEnd_toStartOf="@+id/buttonPath2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSort3" />

    <Button
        android:id="@+id/buttonPath2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="path2"
        android:text="@string/button_path_2"
        app:layout_constraintEnd_toStartOf="@+id/buttonPath3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonPath1"
        app:layout_constraintTop_toTopOf="@+id/buttonPath1" />

    <Button
        android:id="@+id/buttonPath3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="path3"
        android:text="@string/button_path_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonPath2"
        app:layout_constraintTop_toTopOf="@+id/buttonPath2" />

    <!-- As this button is last it will render ontop of the others, which is important incase it overlaps -->
    <Button
        android:id="@+id/buttonMoving"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="24dp"
        android:onClick="moveButton"
        android:text="@string/button_moving"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>